FE - 화면 크기에 따라 테이블 스크롤 근태신청 및 변경(일반/기타) 근태 신청 내역 부서근태 조회

--- a/src/main/resources/static/css/emp_att.css
+++ b/src/main/resources/static/css/emp_att.css
@@ -24,11 +24,6 @@
     padding: 12px;
 }
 
-.left .attAprlList {
-    overflow-x: hidden;
-    white-space: normal;
-}
-
 table td:empty::after {
     content: "\00a0"; /* non-breaking space */
 }
@@ -158,6 +153,7 @@ table td {
     border-bottom: 2px solid #ccc;
     font-weight: 600;
     text-align: center;
+    white-space: nowrap;
 }
 
 .attAprlList tbody td {
