--- a/src/main/resources/templates/myHistory/main.html
+++ b/src/main/resources/templates/myHistory/main.html
@@ -80,7 +80,7 @@
                         </div>
                     </form>
                 </div>
-                 <div class="list tab-content active">
+                 <div class="attAprlList">
                     <table>
                         <thead>
                         <tr>
