--- a/src/main/resources/static/css/att.css
+++ b/src/main/resources/static/css/att.css
@@ -90,6 +90,14 @@ input[readonly]:focus {
 
 }
 
+/* 테이블 스크롤 감싸기 */
+.attAprlList {
+    overflow-x: auto;        /* 가로 스크롤 */
+    overflow-y: hidden;
+    max-width: 100%;         /* 컨테이너 밖으로 못 나가게 */
+    box-sizing: border-box;
+}
+
 /* 헤더 스타일 */
 #attTable thead th {
     background-color: #f4f6f8;
